--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, ubuntu-22.04, windows-2022]
+        os: [macos-13, macos-14, ubuntu-22.04, ubuntu-22.04-arm, windows-2022]
         # os: [macos-14, windows-2022]
         node: [18, 20, 22, 23]
 
