--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -18,6 +18,25 @@ runs:
         node-version: ${{ inputs.node }}
         cache: 'npm'
         cache-dependency-path: package-lock.json
+
+    - name: Cache node-gyp Linux
+      if: runner.os == 'Linux'
+      uses: actions/cache@v4
+      env:
+        cache-name: cache-node-gyp
+      with:
+        path: ~/.cache/node-gyp
+        key: '${{ inputs.os }}-${{ inputs.node}}'
+
+    - name: Cache node-gyp macOs
+      if: runner.os == 'macOS'
+      uses: actions/cache@v4
+      env:
+        cache-name: cache-node-gyp
+      with:
+        path: ~/Library/Caches/node-gyp
+        key: '${{ inputs.os }}-${{ inputs.node}}'
+
    
     - name: Cache node modules
       id: cache-nodemodules
