--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -37,7 +37,7 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if(${{ inputs.runs-on }} == 'windows-2022'){
+              if(${{ inputs.os }} == 'windows-2022'){
                 if(${{ inputs.node }} <23){
                   fs.mkdirSync('release/ia32/${{ inputs.node }}', { recursive: true });
                 }
@@ -46,7 +46,7 @@ runs:
                   fs.mkdirSync('release/arm64/${{ inputs.node }}', { recursive: true });
                 }
               }
-              else if(${{ inputs.runs-on }} == 'macos-14'){
+              else if(${{ inputs.os }} == 'macos-14'){
                 fs.mkdirSync('release/x64/${{ inputs.node }}', { recursive: true });
                 fs.mkdirSync('release/arm64/${{ inputs.node }}', { recursive: true });
               }
@@ -62,7 +62,7 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if(${{ inputs.runs-on }} == 'windows-2022'){
+              if(${{ inputs.os }} == 'windows-2022'){
                 if(${{ inputs.node }} <23){
                   fs.writeFileSync('release/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
@@ -70,7 +70,7 @@ runs:
                 if(${{ inputs.node }} >=20){
                   fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
-              else if(${{ inputs.runs-on }} == 'macos-14'){
+              else if(${{ inputs.os }} == 'macos-14'){
                 fs.writeFileSync('release/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
               }
@@ -79,7 +79,7 @@ runs:
               core.setFailed(err)
             }
 
-      - name: Cache node-gyp
+      - name: Cache node-gyp Windows
         if: runner.os == 'Windows'
         uses: actions/cache@v4
         env:
@@ -87,6 +87,15 @@ runs:
         with:
           path: ~\AppData\Local\node-gyp\Cache
           key: ${{ steps.node-test-version.outputs.node-version }}
+
+      - name: Cache node-gyp macOS
+        if: runner.os == 'macOS'
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-gyp
+        with:
+          path: ~/Library/Caches/node-gyp
+          key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
         if: ${{ inputs.node <23 }} && runner.os == 'Windows'
