--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -72,6 +72,7 @@ runs:
                 }
               }
               else if('${{ inputs.os }}' == 'macos-14'){
+                fs.writeFileSync('release/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 fs.writeFileSync('release/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
               }
@@ -99,7 +100,7 @@ runs:
           key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
-        if: ${{ inputs.node <23 && runner.os == 'Windows' }}
+        if: runner.os == 'Windows' && ${{ inputs.node <23 }}
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
