--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -63,7 +63,7 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ inputs.os }}' == 'windows-2022'){
+              if(${{ runner.os }} == 'Windows'){
                 if(${{ inputs.node }} <23){
                   fs.writeFileSync('release/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
@@ -72,7 +72,7 @@ runs:
                   fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
               }
-              else if('${{ inputs.os }}' == 'macos-14'){
+              else if(${{ runner.os }} == 'macOS'){
                 fs.writeFileSync('release/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
               }
@@ -100,7 +100,7 @@ runs:
           key: '${{ inputs.os }}-${{ inputs.node}}'
 
       - name: Build ia32
-        if: runner.os == 'Windows' && ${{ inputs.node <23 }}
+        if: (runner.os == 'Windows') && (inputs.node <23)
         uses: ./.github/actions/build
         with:
           node: ${{ steps.node-test-version.outputs.node-version }}
