--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -20,11 +20,27 @@ runs:
         os: ${{ inputs.os }}
 
     - name: Create release folder
+      if:  runner.os == 'Windows'
       shell: pwsh
       run: |
         cmd /c if not exist "lib\native\win32\ia32\${{ inputs.node }}" mkdir "lib\native\win32\ia32\${{ inputs.node }}"
         cmd /c if not exist "lib\native\win32\x64\${{ inputs.node }}" mkdir "lib\native\win32\x64\${{ inputs.node }}"
         cmd /c if not exist "lib\native\win32\arm64\${{ inputs.node }}" mkdir "lib\native\win32\arm64\${{ inputs.node }}"
+
+    - name: Create release folder
+      if:  runner.os == 'macOS'
+      uses: actions/github-script@v7
+      with:
+        result-encoding: string
+        script: |
+          try {
+            const fs = require('fs')
+              fs.mkdirSync('lib/native/darwin/x64/${{ inputs.node }}', { recursive: true });
+              fs.mkdirSync('lib/native/darwin/arm64/${{ inputs.node }}', { recursive: true });
+          } catch(err) {
+            core.error("Error creating release directory")
+            core.setFailed(err)
+          }
 
     - name: Download artifacts
       uses: actions/download-artifact@v4
@@ -37,9 +53,25 @@ runs:
       run: ls -R release
 
     - name: Copy artifacts
+      if:  runner.os == 'Windows'
       shell: pwsh
       run: |
         cmd /c copy /y release\edge-js-${{ inputs.node }}\x64\${{ inputs.node }}\edge_*.node lib\native\win32\x64\${{ inputs.node }}
+
+    - name: Copy artifacts
+      if:  runner.os == 'macOS'
+      uses: actions/github-script@v7
+      with:
+        result-encoding: string
+        script: |
+          try {
+            const fs = require('fs')
+              fs.copyFileSync('release/edge-js-${{ inputs.node }}/x64/${{ inputs.node }}/edge_coreclr.node', 'lib/native/darwin/x64/${{ inputs.node }}/edge_coreclr.node');
+              fs.copyFileSync('release/edge-js-${{ inputs.node }}/x64/${{ inputs.node }}/edge_coreclr.node', 'lib/native/darwin/arm64/${{ inputs.node }}/edge_coreclr.node');
+          } catch(err) {
+            core.error("Error creating release directory")
+            core.setFailed(err)
+          }
 
     - name: Test
       uses: ./.github/actions/test-windows
