--- a/.github/actions/test-windows/action.yml
+++ b/.github/actions/test-windows/action.yml
@@ -15,13 +15,23 @@ runs:
         length_from_start: 2
 
     - name: Check edge-js Windows pre-built files
+      if:  runner.os == 'Windows'
       uses: andstor/file-existence-action@v3
       with:
         files: "lib/native/win32/${{ runner.arch }}/${{ steps.node_version.outputs.substring }}/edge_coreclr.node, lib/native/win32/${{ runner.arch }}/${{ steps.node_version.outputs.substring }}/edge_nativeclr.node"
         fail: true
         ignore_case: true
 
+    - name: Check edge-js macOS pre-built files
+      if:  runner.os == 'macOS'
+      uses: andstor/file-existence-action@v3
+      with:
+        files: "lib/native/darwin/${{ runner.arch }}/${{ steps.node_version.outputs.substring }}/edge_coreclr.node"
+        fail: true
+        ignore_case: true
+
     - name: Run .NET 4.5 tests
+      if:  runner.os == 'Windows'
       shell: bash
       run: node tools/test.js CI
 
