--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -37,7 +37,7 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if('${{ inputs.os }}' == 'windows-2022'){
+              if('${{ runner.os }}' == 'Windows'){
                 if(${{ inputs.node }} <23){
                   fs.mkdirSync('release/ia32/${{ inputs.node }}', { recursive: true });
                 }
@@ -46,7 +46,7 @@ runs:
                   fs.mkdirSync('release/arm64/${{ inputs.node }}', { recursive: true });
                 }
               }
-              else if('${{ inputs.os }}' == 'macos-14'){
+              else if('${{ runner.os }}' == 'macOS'){
                 fs.mkdirSync('release/ia32/${{ inputs.node }}', { recursive: true });
                 fs.mkdirSync('release/x64/${{ inputs.node }}', { recursive: true });
                 fs.mkdirSync('release/arm64/${{ inputs.node }}', { recursive: true });
@@ -63,7 +63,7 @@ runs:
           script: |
             try {
               const fs = require('fs')
-              if(${{ runner.os }} == 'Windows'){
+              if('${{ runner.os }}' == 'Windows'){
                 if(${{ inputs.node }} <23){
                   fs.writeFileSync('release/ia32/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
@@ -72,7 +72,7 @@ runs:
                   fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 }
               }
-              else if(${{ runner.os }} == 'macOS'){
+              else if('${{ runner.os }}' == 'macOS'){
                 fs.writeFileSync('release/x64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
                 fs.writeFileSync('release/arm64/${{ inputs.node }}/node.version', '${{ steps.node-test-version.outputs.node-version }}');
               }
