--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
     strategy:
       matrix:
         # os: [windows-2022]
-        os: [macos-13, macod-14]
+        os: [macos-13, macos-14]
       # fail-fast: false
 
     name: test ${{ matrix.os }}-node-${{ inputs.build-version }}
