--- a/.github/actions/build-node/action.yml
+++ b/.github/actions/build-node/action.yml
@@ -130,8 +130,17 @@ runs:
     
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: success()
+        if: runner.os == 'Windows' && success()
         with:
-          name: edge-js-${{ inputs.node }}
+          name: win32-edge-js-${{ inputs.node }}
           path: |
             release
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        if: runner.os  == 'macOS' && success()
+        with:
+          name: darwin-edge-js-${{ inputs.node }}
+          path: |
+            release
+
