--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
         # os: [macos-13, macos-14, ubuntu-22.04, ubuntu-22.04-arm, windows-2022]
         os: [macos-13, macos-14, macos-15]
         # node: [18, 20, 22, 23]
-        node: [20]
+        node: [16, 20]
     steps:
 
       - name: Checkout code
