testing macOS build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,8 +84,9 @@ jobs:
       fail-fast: false
       matrix:
         # os: [macos-13, macos-14, ubuntu-22.04, ubuntu-22.04-arm, windows-2022]
-        os: [macos-13, macos-15]
-        # node: [18, 20, 22, 23]
+        # os: [macos-13, macos-14]
+        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm]
+       # node: [18, 20, 22, 23]
         node: [16,18,20,22,23]
     steps:
 
