testing macOS build

--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -56,8 +56,8 @@ runs:
       shell: bash
       run: |
         node -v && npm -v && dotnet --version && node -p process.platform && node -p process.arch
-        
-    - if: runner.os == 'macOS' && inputs.node == 16
+
+    - if: runner.os == 'macOS' && inputs.node <= 16
       shell: bash
       name: Add missing packages for macOS NodeJs 16 
       run: |
