--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -11,10 +11,12 @@ env:
 
 jobs:
   build-16:
-    runs-on: windows-2022
     timeout-minutes: 20
     strategy:
-      fail-fast: false   
+      fail-fast: false
+      matrix: 
+       os: [windows-2022]
+    runs-on: ${{ matrix.os }}
     name: build node-16
     steps:
 
@@ -25,13 +27,15 @@ jobs:
         uses: ./.github/actions/build-node
         with:
           node: 16
-          os: ${{ runner.os }}
+          os: ${{ matrix.os }}
   
   build-18:
-    runs-on: windows-2022
     timeout-minutes: 20
     strategy:
-      fail-fast: false   
+      fail-fast: false
+      matrix: 
+       os: [windows-2022]
+    runs-on: ${{ matrix.os }}
     name: build node-18
     steps:
 
@@ -42,13 +46,15 @@ jobs:
         uses: ./.github/actions/build-node
         with:
           node: 18
-          os: ${{ runner.os }}
+          os: ${{ matrix.os }}
   
   build-20:
-    runs-on: windows-2022
     timeout-minutes: 20
     strategy:
-      fail-fast: false   
+      fail-fast: false
+      matrix: 
+       os: [windows-2022]
+    runs-on: ${{ matrix.os }}
     name: build node-20
     steps:
 
@@ -59,13 +65,15 @@ jobs:
         uses: ./.github/actions/build-node
         with:
           node: 20
-          os: ${{ runner.os }}
+          os: ${{ matrix.os }}
 
   build-22:
-    runs-on: windows-2022
     timeout-minutes: 20
     strategy:
       fail-fast: false
+      matrix: 
+       os: [windows-2022]
+    runs-on: ${{ matrix.os }}
     name: build node-22
     steps:
 
@@ -76,13 +84,14 @@ jobs:
         uses: ./.github/actions/build-node
         with:
           node: 22
-          os: ${{ runner.os }}
+          os: ${{ matrix.os }}
   
   build-23:
-    runs-on: windows-2022
-    timeout-minutes: 20
     strategy:
-      fail-fast: false   
+      fail-fast: false
+      matrix: 
+       os: [windows-2022]
+    runs-on: ${{ matrix.os }}
     name: build node-23
     steps:
 
@@ -93,7 +102,7 @@ jobs:
         uses: ./.github/actions/build-node
         with:
           node: 23
-          os: ${{ runner.os }}
+          os: ${{ matrix.os }}
   
   test-16:
     strategy:
