--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
         default: '20'
         type: choice
         options:
+        - 14
         - 16
         - 18
         - 20
@@ -28,7 +29,7 @@ jobs:
     strategy:
       matrix:
         # os: [windows-2022, macos-14]
-        os: [windows-2022, macos-15]
+        os: [macos-15]
       fail-fast: true
        
     name: build node-${{ inputs.build-version }} ${{ matrix.os }}
@@ -49,7 +50,7 @@ jobs:
     strategy:
       matrix:
         # os: [windows-2022]
-        os: [windows-2022, macos-13, macos-15]
+        os: [macos-13, macos-15]
       fail-fast: false
 
     name: test ${{ matrix.os }}-node-${{ inputs.build-version }}
