testing macOS build

--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -114,4 +114,19 @@ runs:
         node: ${{ inputs.node }}
         os: ${{ inputs.os }}
         name: 'build-tests'
- 
+
+    - name: publish test-summary nacOS
+      if: runner.os == 'macOS'
+      uses: EnricoMi/publish-unit-test-result-action/macos@v2
+      with:
+        check_run_annotations: 'none'
+        check_name: 'test-summary-${{ inputs.os }}'
+        files: "test-results.xml"
+        
+    - name: publish test-summary Windows
+      if: runner.os == 'Windows'
+      uses: EnricoMi/publish-unit-test-result-action/windows@v2
+      with:
+        check_run_annotations: 'none'
+        check_name: 'test-summary-${{ inputs.os }}'
+        files: "test-results.xml"
