--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -19,14 +19,14 @@ runs:
         cache: 'npm'
         cache-dependency-path: package-lock.json
 
-    # - name: Cache node-gyp Linux
-    #   if: runner.os == 'Linux'
-    #   uses: actions/cache@v4
-    #   env:
-    #     cache-name: cache-node-gyp
-    #   with:
-    #     path: ~/.cache/node-gyp
-    #     key: '${{ inputs.os }}-${{ inputs.node}}'
+    - name: Cache node-gyp Linux
+      if: runner.os == 'Linux'
+      uses: actions/cache@v4
+      env:
+        cache-name: cache-node-gyp
+      with:
+        path: ~/.cache/node-gyp
+        key: '${{ inputs.os }}-${{ inputs.node}}'
 
     # - name: Cache node-gyp macOs
     #   if: runner.os == 'macOS'
