--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,11 +83,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [macos-13, macos-14, ubuntu-22.04, ubuntu-22.04-arm, windows-2022]
-        # os: [macos-13, macos-14]
-        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm]
+        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
+        # os: [macos-13, macos-15]
        # node: [18, 20, 22, 23]
-        node: [16,18,20,22,23]
+        node: [18, 20, 22, 23]
     steps:
 
       - name: Checkout code
@@ -104,16 +103,10 @@ jobs:
       #   run: |
       #     pip install setuptools
 
-      - name: Run .NET 4.5 tests
-        if:  runner.os == 'Windows'
+      - if:  runner.os == 'Windows'
+        name: Run .NET 4.5 tests
         shell: bash
         run: node tools/test.js CI
-
-      # - if: runner.os == 'Windows'
-      #   name: Run Windows tests
-      #   uses: ./.github/actions/test-windows
-      #   with:
-      #     node: ${{ matrix.node }}
 
       - if: runner.os == 'macOS' || runner.os == 'Linux'
         name: "Run .net core tests"
