--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -28,14 +28,14 @@ runs:
         path: ~/.cache/node-gyp
         key: '${{ inputs.os }}-${{ inputs.node}}'
 
-    # - name: Cache node-gyp macOs
-    #   if: runner.os == 'macOS'
-    #   uses: actions/cache@v4
-    #   env:
-    #     cache-name: cache-node-gyp
-    #   with:
-    #     path: ~/Library/Caches/node-gyp
-    #     key: '${{ inputs.os }}-${{ inputs.node}}'
+    - name: Cache node-gyp macOs
+      if: runner.os == 'macOS'
+      uses: actions/cache@v4
+      env:
+        cache-name: cache-node-gyp
+      with:
+        path: ~/Library/Caches/node-gyp
+        key: '${{ inputs.os }}-${{ inputs.node}}'
 
 
     - name: Cache node modules
@@ -51,6 +51,12 @@ runs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '8.0.x' # SDK Version to use; x will use the latest version of the 8.0 channel
+
+    - name: Setup pkf-config
+      if: runner.os == 'macOS'
+      shell: bash
+      run: |
+        brew install pkg-config
 
     - name: Versions
       shell: bash
