--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
         # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
         os: [macos-13, macos-14]
        # node: [18, 20, 22, 23]
-        node: [18, 20, 22, 23]
+        node: [20, 22]
     steps:
 
       - name: Checkout code
