--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -37,7 +37,6 @@ runs:
         path: ~/Library/Caches/node-gyp
         key: '${{ inputs.os }}-${{ inputs.node}}'
 
-
     - name: Cache node modules
       id: cache-nodemodules
       uses: actions/cache@v4
@@ -53,11 +52,21 @@ runs:
         dotnet-version: '8.0.x' # SDK Version to use; x will use the latest version of the 8.0 channel
 
     - name: Setup Mono
-      if: inputs.os == 'macos-14'
+      if: inputs.os == 'macos-14' || inputs.os == 'macos-15'
       shell: bash
       run: |
         brew install mono
         brew reinstall pkg-config
+
+    - name: Setup Mono
+      if: inputs.os == 'macos-13'
+      shell: bash
+      run: |
+        brew uninstall mono
+        brew uninstall pkg-config
+        brew reinstall mono
+        brew reinstall pkg-config
+
 
     - name: Versions
       shell: bash
