--- a/.github/actions/test-build/action.yml
+++ b/.github/actions/test-build/action.yml
@@ -102,7 +102,7 @@ runs:
         ignore_case: true
 
     - name: Run .NET 4.5 tests
-      # if:  runner.os == 'Windows'
+      if: inputs.os != 'macos-13'
       shell: bash
       run: node tools/test.js CI
 
