testing macOS build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,7 +104,8 @@ jobs:
       #     pip install setuptools
 
       - name: Run .NET 4.5 tests
-        if: matrix.os != 'macos-13' && runner.os != 'Linux'
+        # if: matrix.os != 'macos-13' && runner.os != 'Linux'
+        if: matrix.os != 'macos-13'
         shell: bash
         run: node tools/test.js CI
 
