--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,7 +105,7 @@ jobs:
 
       - name: Run .NET 4.5 tests
         # if: matrix.os != 'macos-13' && runner.os != 'Linux'
-        if: matrix.os != 'macos-13'
+        # if: matrix.os != 'macos-13'
         shell: bash
         run: node tools/test.js CI
 
