--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
-        os: [macos-13, macos-15, ubuntu-24.04]
+        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm]
        # node: [18, 20, 22, 23]
         node: [20, 22]
     steps:
@@ -104,8 +104,7 @@ jobs:
       #     pip install setuptools
 
       - name: Run .NET 4.5 tests
-        # if: matrix.os != 'macos-13' && runner.os != 'Linux'
-        # if: matrix.os != 'macos-13'
+        if: matrix.os != 'macos-13'
         shell: bash
         run: node tools/test.js CI
 
