--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     strategy:
       matrix:
         # os: [windows-2022, macos-14]
-        os: [macos-14]
+        os: [windows-2022, macos-15]
       fail-fast: true
        
     name: build node-${{ inputs.build-version }} ${{ matrix.os }}
@@ -48,8 +48,8 @@ jobs:
     needs: build
     strategy:
       matrix:
-        os: [macos-13, macos-15]
-        # os: [windows-2022, macos-13, macos-15]
+        # os: [windows-2022]
+        os: [windows-2022, macos-13, macos-15]
       fail-fast: false
 
     name: test node-${{ inputs.build-version }} ${{ matrix.os }}
