--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,10 +83,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
-        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm]
+        os: [macos-13, macos-15, ubuntu-24.04, ubuntu-24.04-arm, windows-2022]
+        # os: [macos-13, macos-15]
        # node: [18, 20, 22, 23]
-        node: [20, 22]
+        node: [18, 20, 22, 23]
     steps:
 
       - name: Checkout code
@@ -98,18 +98,12 @@ jobs:
           node: ${{ matrix.node }}
           os: ${{ matrix.os }}
 
-      # - if: runner.os == 'macOS' && matrix.node == '16.x'
-      #   name: Add missing packages for macOS NodeJs 16 
-      #   run: |
-      #     pip install setuptools
-
       - name: Run .NET 4.5 tests
         if: matrix.os != 'macos-13'
         shell: bash
         run: node tools/test.js CI
 
       - name: "Run .net core tests"
-        # if: runner.os == 'macOS' || runner.os == 'Linux'
         run: node tools/test.js CI
         env:
           EDGE_USE_CORECLR: 1
