--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,15 +12,17 @@ environment:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
   matrix:
     # node.js
-    - nodejs: "23"
-    - nodejs: "22"
+    # - nodejs: "23"
+    # - nodejs: "22"
     - nodejs: "20"
-    - nodejs: "18"
+    # - nodejs: "18"
 
 install:
   # - sh: if [ "$APPVEYOR_BUILD_WORKER_IMAGE" = 'Ubuntu2204' ]; then sudo apt-get -qq update && sudo apt-get -y -qq install build-essential libgconf-2-4 python3 libglib2.0-dev; fi
   # - cmd: powershell .\appveyor.ps1  
   - cmd: powershell Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs) x64
+  - sh: brew update
+  - sh: brew upgrade
   - sh: brew install mono --overwrite
   - sh: brew reinstall pkg-config
   - sh: nvm ls
